[tool.poetry]
name = "wfgm-sync-server"
version = "0.1.0"
description = ""
authors = ["celeste <hi@celestialfault.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
aiohttp = "^3.11.2"
beanie = "^1.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
